--- a/css/login.css
+++ b/css/login.css
@@ -11,9 +11,13 @@ a.loi{
 div.table{
     position: relative;
 }
+div.logbtn{
+    position: relative;
+}
 div.ThirdLogin{
     position: relative;
     left: 42%;
+    pointer-events: none;
 }
 input.btn
 {
@@ -55,8 +59,8 @@ div.logins{
     left: 10%;
     padding:10px 40px;
     background:#ffffff;
-    width:35%;
-    height: 55%;
+    width:33%;
+    height: 53%;
     border-radius:25px;
     box-shadow: 8px 8px 8px #d0d0d0;
 }
