--- a/css/login.css
+++ b/css/login.css
@@ -29,7 +29,6 @@ input.btn
     background-color:rgb(30, 146, 255);
 }
 a {
-
     text-decoration:none;
 }
 div.logo{
@@ -62,7 +61,7 @@ div.logins{
     width:33%;
     height: 53%;
     border-radius:25px;
-    box-shadow: 8px 8px 8px #d0d0d0;
+    box-shadow: -8px -8px 8px #d0d0d0;
 }
 hr.hr{
     position:relative;
@@ -78,4 +77,5 @@ img.avr{
 img.ThirdLogin{
     height: 10%;
     width: 10%;
+    margin: -70px 0 0 -70px;
 }
